<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55555555"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_01"
        android:layout_width="match_parent"
        android:layout_height="107px"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:tag="(0,107,26)"
        android:text="@string/psp_01"
        android:textColor="@color/colorBlack"
        android:textSize="26px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/colorSelectgrey"
        android:orientation="horizontal"
        android:tag="(0,2)" />

    <TextView
        android:id="@+id/tv_02"
        android:layout_width="match_parent"
        android:layout_height="108px"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:tag="(0,108,26)"
        android:text="@string/psp_02"
        android:textColor="@color/colorBlack"
        android:textSize="26px" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="15px"
        android:background="@color/colorSelectgrey"
        android:orientation="horizontal"
        android:tag="(0,15)" />

    <TextView
        android:id="@+id/tv_03"
        android:layout_width="match_parent"
        android:layout_height="94px"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:tag="(0,94,26)"
        android:text="@string/psp_03"
        android:textColor="@color/colorBlack"
        android:textSize="26px" />
</LinearLayout>