<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".activity.LettersOfStationActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorMainBlue"
        android:tag="(0,100)">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:tag="(0,0,32)"
            android:text="@string/login_title"
            android:textColor="@color/colorWhite"
            tools:textSize="32px" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="64px"
            android:layout_height="78px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:onClick="onBack"
            android:src="@mipmap/ic_action_back"
            android:tag="[20,20,20,20](64,78)"
            android:visibility="visible"
            tools:padding="20px" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></View>
    <Button
        android:id="@+id/bt_01"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@drawable/selector_bg_main_04_bt"
        android:tag="(0,80,26)"
        android:text="@string/register_06"
        android:textColor="@color/colorWhite" />
</LinearLayout>
