<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PasswordManageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorMainBlue"
        android:tag="(0,100)">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:tag="(0,0,32)"
            android:text="@string/pm_title"
            android:textColor="@color/colorWhite"
            tools:textSize="32px" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="64px"
            android:layout_height="78px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:onClick="onBack"
            android:src="@mipmap/ic_action_back"
            android:tag="[20,20,20,20](64,78)"
            android:visibility="visible"
            tools:padding="20px" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/change_password_layout"
        android:layout_width="match_parent"
        android:layout_height="90px"

        android:layout_marginRight="27px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:tag="{0,0,22,0}(0,90)"
        android:background="@color/colorWhite"
        android:paddingLeft="28px"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="(0,0,26)"
            android:text="@string/pm_01"
            android:textColor="#909090"
            tools:textSize="26px" />

        <ImageView
            android:id="@+id/iv_pm_01"
            android:layout_width="18px"
            android:layout_height="30px"
            android:src="@mipmap/btn_right"
            android:tag="(18,30)" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"

        android:background="@color/colorGreydividingline2"
         />

    <LinearLayout
        android:id="@+id/transaction_password_layout"
        android:layout_width="match_parent"
        android:layout_height="90px"

        android:layout_marginRight="27px"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:tag="{0,0,22,0}(0,90)"
        android:background="@color/colorWhite"
        android:paddingLeft="28px"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="(0,0,26)"
            android:text="@string/pm_02"
            android:textColor="#909090"
            tools:textSize="26px" />
        <TextView
            android:id="@+id/tv_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="(0,0,28)"
            android:text="@string/pm_03"
            android:textColor="#999999"
            android:layout_marginRight="10dp"
            tools:textSize="26px" />
        <ImageView
            android:id="@+id/iv_pm_02"
            android:layout_width="18px"
            android:layout_height="30px"
            android:src="@mipmap/btn_right"
            android:tag="(18,30)"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"

        android:background="@color/colorGreydividingline2"
     />
</LinearLayout>
